# sioyek-python-autoscroll

./: README.md  pyproject.toml
src/sioyek_autoscroll/: __main__.py
